# data-flow

./: .gitignore  CMakeLists.txt  README
src/: Program.cc  Program.h  Reflection_input.cc  Reflection_output_data_flow.cc.h  main.cc
src/core/: AbstractNode.h  Arc.cc  Arc.h  CommonNodes.cc  CommonNodes.h  CommonSinks.cc  CommonSinks.h  CommonSources.cc  CommonSources.h  Core.h  Exception.h  IFlowObserver.h  INode.cc  INode.h  IOPolicy.h  MathNodes.h  Port.cc  Port.h  Sink.h  Source.h
